--- a/src/App.css
+++ b/src/App.css
@@ -64,12 +64,29 @@
   height: auto;
 }
 
-.services {
-  padding: 2rem;
-  background-color: #f5f5f5;
+h1,
+h2,
+h3 {
+  font-family: sofia-pro, sans-serif;
+  font-weight: 600;
+  font-style: normal;
 }
 
-.services h2 {
+h1 {
+  font-size: 36px;
+  font-weight: 700;
+  letter-spacing: -1px;
+  line-height: 1.2;
   text-align: center;
-  margin-bottom: 1rem;
+  margin: 100px 0 40px;
+}
+
+h2 {
+  font-weight: 400;
+  margin: 50px 0 10px;
+}
+
+p {
+  margin: 0 0 30px 0;
+  font-size: 18px;
 }
