--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,17 @@ code {
     monospace;
 }
 
+@layer base {
+  .bg-fiber-carbon {
+    background: radial-gradient(black 15%, transparent 16%) 0 0,
+      radial-gradient(black 15%, transparent 16%) 8px 8px,
+      radial-gradient(rgba(255, 255, 255, 0.1) 15%, transparent 20%) 0 1px,
+      radial-gradient(rgba(255, 255, 255, 0.1) 15%, transparent 20%) 8px 9px;
+    background-color: #282828;
+    background-size: 16px 16px;
+  }
+}
+
 @font-face {
   font-family: "League";
   src: url("/src/fonts/LeagueSpartan-ExtraBold.ttf");
