--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -33,7 +33,7 @@
 }
 
 .service-item {
-  background: linear-gradient(135deg, #ff9a9e 0%, #fad0c4 99%, #fad0c4 100%);
+  position: relative;
   padding: 40px;
   border-radius: 20px;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
@@ -44,6 +44,63 @@
   align-items: center;
   text-align: center;
   height: 250px;
+  overflow: hidden;
+}
+
+.service-item:nth-child(1) {
+  background-image: url("/src/images/STARLIGHT.jpeg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.service-item:nth-child(2) {
+  background-image: url("/src/images/lunar.jpeg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.service-item:nth-child(3) {
+  background-image: url("/src/images/elements.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.service-item:nth-child(4) {
+  background-image: url("/src/images/wings.jpeg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.service-item::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
+  z-index: 1;
+  filter: brightness(50%);
+}
+
+.service-item:hover .service-description {
+  opacity: 1;
+}
+
+.service-description {
+  font-size: 1rem;
+  color: #fff;
+  max-width: 80%;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  z-index: 2;
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .service-title {
@@ -51,22 +108,6 @@
   color: #fff;
   font-weight: bold;
   margin-bottom: 15px;
-}
-
-.service-description {
-  font-size: 1rem;
-  color: #fff;
-  max-width: 80%;
-}
-
-.service-item:nth-child(2) {
-  background: linear-gradient(135deg, #a18cd1 0%, #fbc2eb 100%);
-}
-
-.service-item:nth-child(3) {
-  background: linear-gradient(135deg, #84fab0 0%, #8fd3f4 100%);
-}
-
-.service-item:nth-child(4) {
-  background: linear-gradient(135deg, #ffecd2 0%, #fcb69f 100%);
+  position: relative;
+  z-index: 3;
 }
